test/analyzer/input_programs/invalid_programs/program05.tea
x := 4
y := 44

# z has not yet been declared
[x, y, z]

z := 444